# agent_smith

./: .container_id  .gitignore  BENCHMARK_REPORT.md  CHANGES.md  Makefile  README.md  TODO.md  benchmark.md  main.py  mcp_tools_mbpp.py  mcp_tools_swebench.py  pyproject.toml  requirements.txt  sandbox_template.json
benchmarks/mbpp/: solution_108_gemini-1.5-flash.json  solution_163_gemini-1.5-flash.json  solution_163_llama-3.3-70b.json  task_108.json  task_163.json
benchmarks/swebench/: solution_pydata__xarray-4629_deepseek-r1-0528.json  solution_pydata__xarray-4629_devstral-small.json  solution_pydata__xarray-4629_gemini-2.5-flash.json  solution_pydata__xarray-4629_llama-3.3-70b-versatile.json  solution_pydata__xarray-4629_qwen3-235b-a22b-2507.json  solution_sympy__sympy-13480_deepseek-r1-0528.json  solution_sympy__sympy-13480_devstral-small.json  solution_sympy__sympy-13480_gemini-2.5-flash.json  solution_sympy__sympy-13480_llama-3.3-70b-versatile.json  solution_sympy__sympy-13480_qwen3-235b-a22b-2507.json  solution_sympy__sympy-14711_deepseek-r1-0528.json  solution_sympy__sympy-14711_devstral-small.json  solution_sympy__sympy-14711_gemini-2.5-flash.json  solution_sympy__sympy-14711_llama-3.3-70b-versatile.json  solution_sympy__sympy-14711_qwen3-235b-a22b-2507.json
moulinette/: task.json
moulinette/evaluations/mbpp/2026-03-01_13-12-36/282/: task.json
student/: agent_config.py  agent_mbpp.py  agent_swebench.py  code_extraction.py  config.py  errors.py  eval_logger.py  llm.py  mcp_bridge.py  sandbox.py  sandbox_cli.py  sandbox_config.py
